// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "pending": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-1",
              "replyCount": 0,
            },
          },
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-2",
              "replyCount": 0,
            },
          },
        ],
        "viewNewEdges": Array [],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "enteredLive": false,
        "id": "comment-1",
        "replyCount": 0,
        "replyListElement": <NextReplyListComponent
          comment={
            Object {
              "enteredLive": false,
              "id": "comment-1",
              "replyCount": 0,
            }
          }
          indentLevel={2}
          settings={
            Object {
              "disableCommenting": Object {
                "enabled": false,
              },
            }
          }
          story={
            Object {
              "closedAt": null,
              "id": "story-id",
              "isClosed": false,
              "settings": Object {
                "live": Object {
                  "enabled": true,
                },
              },
            }
          }
          viewer={null}
        />,
        "showConversationLink": false,
      },
      Object {
        "enteredLive": false,
        "id": "comment-2",
        "replyCount": 0,
        "replyListElement": <NextReplyListComponent
          comment={
            Object {
              "enteredLive": false,
              "id": "comment-2",
              "replyCount": 0,
            }
          }
          indentLevel={2}
          settings={
            Object {
              "disableCommenting": Object {
                "enabled": false,
              },
            }
          }
          story={
            Object {
              "closedAt": null,
              "id": "story-id",
              "isClosed": false,
              "settings": Object {
                "live": Object {
                  "enabled": true,
                },
              },
            }
          }
          viewer={null}
        />,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={false}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  onViewNew={[Function]}
  settings={
    Object {
      "disableCommenting": Object {
        "enabled": false,
      },
    }
  }
  story={
    Object {
      "closedAt": null,
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "live": Object {
          "enabled": true,
        },
      },
    }
  }
  viewNewCount={0}
  viewer={null}
/>
`;

exports[`renders correctly when replies are empty 1`] = `""`;

exports[`when has more replies renders hasMore 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "pending": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-1",
              "replyCount": 0,
            },
          },
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-2",
              "replyCount": 0,
            },
          },
        ],
        "viewNewEdges": Array [],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "enteredLive": false,
        "id": "comment-1",
        "replyCount": 0,
        "replyListElement": null,
        "showConversationLink": false,
      },
      Object {
        "enteredLive": false,
        "id": "comment-2",
        "replyCount": 0,
        "replyListElement": null,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={false}
  hasMore={true}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  onViewNew={[Function]}
  settings={
    Object {
      "disableCommenting": Object {
        "enabled": false,
      },
    }
  }
  story={
    Object {
      "closedAt": null,
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "live": Object {
          "enabled": true,
        },
      },
    }
  }
  viewNewCount={0}
  viewer={null}
/>
`;

exports[`when has more replies when showing all disables show all button 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "pending": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-1",
              "replyCount": 0,
            },
          },
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-2",
              "replyCount": 0,
            },
          },
        ],
        "viewNewEdges": Array [],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "enteredLive": false,
        "id": "comment-1",
        "replyCount": 0,
        "replyListElement": null,
        "showConversationLink": false,
      },
      Object {
        "enteredLive": false,
        "id": "comment-2",
        "replyCount": 0,
        "replyListElement": null,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={true}
  hasMore={true}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  onViewNew={[Function]}
  settings={
    Object {
      "disableCommenting": Object {
        "enabled": false,
      },
    }
  }
  story={
    Object {
      "closedAt": null,
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "live": Object {
          "enabled": true,
        },
      },
    }
  }
  viewNewCount={0}
  viewer={null}
/>
`;

exports[`when has more replies when showing all enable show all button after loading is done 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "pending": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-1",
              "replyCount": 0,
            },
          },
          Object {
            "node": Object {
              "enteredLive": false,
              "id": "comment-2",
              "replyCount": 0,
            },
          },
        ],
        "viewNewEdges": Array [],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "enteredLive": false,
        "id": "comment-1",
        "replyCount": 0,
        "replyListElement": null,
        "showConversationLink": false,
      },
      Object {
        "enteredLive": false,
        "id": "comment-2",
        "replyCount": 0,
        "replyListElement": null,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={false}
  hasMore={true}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  onViewNew={[Function]}
  settings={
    Object {
      "disableCommenting": Object {
        "enabled": false,
      },
    }
  }
  story={
    Object {
      "closedAt": null,
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "live": Object {
          "enabled": true,
        },
      },
    }
  }
  viewNewCount={0}
  viewer={null}
/>
`;
